--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.20",
+    "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
